Change: homepage value & name of interfaces folder

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "babasile.github.io",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://babasile.github.io/resume",
+	"homepage": "https://babasile.github.io/",
 	"dependencies": {
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
