--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"deploy": "npm run build && gh-pages -d build",
+		"deploy": "npm run build && gh-pages -b master -d build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
