--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
 		"@types/node": "^12.12.30",
 		"@types/react": "^16.9.25",
 		"@types/react-dom": "^16.9.5",
+		"@types/react-scrollspy": "^3.3.2",
 		"bootstrap": "^4.4.1",
 		"react": "^16.13.1",
 		"react-bootstrap": "^1.0.0",
 		"react-dom": "^16.13.1",
 		"react-scripts": "3.4.1",
+		"react-scrollspy": "^3.4.2",
 		"typescript": "^3.7.5"
 	},
 	"scripts": {
