--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react": "^16.13.1",
 		"react-bootstrap": "^1.0.0",
 		"react-dom": "^16.13.1",
+		"react-ga": "^2.7.0",
 		"react-scripts": "3.4.1",
 		"react-scrollspy": "^3.4.2",
 		"typescript": "^3.7.5"
