--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"homepage": "https://babasile.github.io/",
 	"dependencies": {
+		"@apollo/client": "^3.1.4",
 		"@fortawesome/fontawesome-svg-core": "^1.2.28",
 		"@fortawesome/free-brands-svg-icons": "^5.13.0",
 		"@fortawesome/free-regular-svg-icons": "^5.13.0",
@@ -18,6 +19,7 @@
 		"@types/react-dom": "^16.9.5",
 		"@types/react-scrollspy": "^3.3.2",
 		"bootstrap": "^4.4.1",
+		"graphql": "^15.3.0",
 		"i18next": "^19.4.4",
 		"react": "^16.13.1",
 		"react-bootstrap": "^1.0.0",
