--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,10 @@ jobs:
         run: |
           npm install
           npm run build
+        env:
+          CI: false
+          REACT_APP_STRAPI_URL: ${{secrets.REACT_APP_STRAPI_URL}}
+          REACT_APP_UA_GOOGLE_PROPERTY: ${{secrets.REACT_APP_UA_GOOGLE_PROPERTY}}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.6
