--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
 	"name": "babasile.github.io",
-	"version": "0.1.0",
+	"version": "1.0.0",
 	"private": true,
 	"homepage": "https://babasile.github.io/",
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test --reporters=default --coverage --testResultsProcessor ./node_modules/jest-sonar-reporter/index.js",
+		"eject": "react-scripts eject"
+	},
 	"dependencies": {
 		"@apollo/client": "^3.1.4",
 		"@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -32,12 +38,23 @@
 		"react-scrollspy": "^3.4.2",
 		"typescript": "^3.7.5"
 	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"deploy": "npm run build && gh-pages -b master -d build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+	"devDependencies": {
+		"jest-sonar-reporter": "^2.0.0"
+	},
+	"jest": {
+		"collectCoverageFrom": [
+			"**/*.{ts,tsx}",
+			"!src/i18n/en/**",
+			"!src/i18n/fr/**",
+			"!src/serviceWorker.ts",
+			"!src/react-app-env.d.ts"
+		]
+	},
+	"jestSonar": {
+		"testResultsProcessor": "jest-sonar-reporter",
+		"reportPath": "coverage",
+		"reportFile": "test-report.xml",
+		"indent": 4
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -53,8 +70,5 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	},
-	"devDependencies": {
-		"gh-pages": "3.1.0"
 	}
 }
